tests/th/T23829_hasty.stderr
T23829_hasty.hs:8:26: error: [GHC-28914]
    • Level error: ‘ty’ is bound at level 0 but used at level -1
    • In the untyped splice: $ty

